--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-agent-backend",
   "version": "1.0.0",
   "description": "Backend for AI Agent chat application",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
